src/objects/CRM_WF_Artes__c.object
<CustomObject>
    <fields>
        <fullName>MX_WF_No_Solicitudes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. solicitudes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Nombre_Campana_sin_Espacios__c</fullName>
        <description>Guarda el nombre de las campañas sin espacios, sin acentos, sin caracteres especiales</description>
        <formula>SUBSTITUTE
(
SUBSTITUTE
(
SUBSTITUTE
(
SUBSTITUTE
(
SUBSTITUTE
(
SUBSTITUTE
(
SUBSTITUTE
(
LOWER(CRM_WF_Nombre_Del_Brief__r.CRM_WF_Campana_Brief__r.Name), 
&quot; &quot;, &quot;_&quot;
)
, &quot;ñ&quot;, &quot;n&quot;
)
 ,&quot;á&quot;, &quot;a&quot;
)
,&quot;é&quot;, &quot;e&quot;
) 
,&quot;í&quot;, &quot;i&quot;
)  
,&quot;ó&quot;, &quot;o&quot;	
)  
,&quot;ú&quot;, &quot;u&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre campaña sin espacios</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Nombre_de_la_campa_a__c</fullName>
        <formula>CRM_WF_Nombre_Del_Brief__r.CRM_WF_Campana_Brief__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de la campaña</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Plataforma_de_env_o__c</fullName>
        <defaultValue>IF( OR($RecordType.Name = &quot;Email EG+ - Silverpop&quot;,
       $RecordType.Name = &quot;Email EG+ - Silverpop con cambios&quot;),&quot;Silverpop&quot;, &quot;Marketing Cloud&quot;)</defaultValue>
        <label>Plataforma de envío</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Silverpop</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Promoci_n__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Promoción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Puntos__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el beneficio Puntos</description>
        <formula>MX_WF_Campana__r.MX_WF_Puntos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Puntos_aux__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Puntos aux</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Pyme__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Pyme</description>
        <formula>MX_WF_Comercio__r.MX_WF_Pyme__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pyme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Pyme_plus__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Pyme plus</description>
        <formula>MX_WF_Comercio__r.MX_WF_Pyme_plus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pyme plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Pyme_plus_plus__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Pyme plus plus</description>
        <formula>MX_WF_Comercio__r.MX_WF_Pyme_plus_plus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pyme plus plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Regalo__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el beneficio Regalo</description>
        <formula>MX_WF_Campana__r.MX_WF_Regalo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regalo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Regalo_aux__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Regalo aux</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Seleccionado_como_Prueba__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo utilizado exclusivamente en el flujo &quot;MX_WF_Solicitud_de_env_o&quot;</description>
        <label>Seleccionado como prueba</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Skip_Payment__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el beneficio Skip Payment</description>
        <formula>MX_WF_Campana__r.MX_WF_Skip_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skip Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Skip_Payment_aux__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Skip Payment aux</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Socio_que_modifica_S_P__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Socio que modifica S&amp;P</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Canales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WF_Subtitulo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subtítulo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Texto_del_v_nculo_de_legales__c</fullName>
        <description>Campo que permite al usuario escribir el texto que contiene el vínculo de los legales</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Texto del vínculo de legales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Tipo_A_B_Testing__c</fullName>
        <description>Campo para la aplicación WF, permite al usuario definir el tipo de AB testing que desea llevar acabo</description>
        <label>Tipo A/B testing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CTA</fullName>
                </value>
                <value>
                    <fullName>Diseño</fullName>
                </value>
                <value>
                    <fullName>Nombre del Remitente</fullName>
                </value>
                <value>
                    <fullName>Subject</fullName>
                </value>
                <value>
                    <fullName>Preheader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Tipo_de_Arte__c</fullName>
        <label>Tipo de arte</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arte Control</fullName>
                </value>
                <value>
                    <fullName>Arte Prueba</fullName>
                </value>
                <value>
                    <fullName>Arte Control AB</fullName>
                    <isActive>false</isActive>
                    <label>Arte Control AB</label>
                </value>
                <value>
                    <fullName>Arte Prueba A/B</fullName>
                    <isActive>false</isActive>
                    <label>Arte Prueba A/B</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Titulo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Título</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Total_de_Registro_Data_Extension__c</fullName>
        <formula>CRM_WF_Data_Extension__r.CRM_WF_Total_de_Registros__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total de registro data extension</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_URL_Final_Del_Arte__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Link del arte aprobado</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MX_WF_URL_del_legal__c</fullName>
        <description>Campo para la aplicación WF, permite definir la liga de los legales</description>
        <encryptionScheme>None</encryptionScheme>
        <label>URL del legal</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MX_WF_URL_que_necesitan_TC__c</fullName>
        <label>URL que necesitan TC</label>
        <summaryFilterItems>
            <field>CRM_WF_URL_Secundarias__c.MX_WF_Validacion_TC__c</field>
            <operation>equals</operation>
            <value>Validado</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_URL_Secundarias__c.CRM_WF_Nombre_Del_Arte__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_WF_URL_que_no_necesitan_TC__c</fullName>
        <label>URL que no necesitan TC</label>
        <summaryFilterItems>
            <field>CRM_WF_URL_Secundarias__c.MX_WF_Validacion_TC__c</field>
            <operation>equals</operation>
            <value>No necesita</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_URL_Secundarias__c.CRM_WF_Nombre_Del_Arte__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_WF_URL_terminos_y_condiciones__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL términos y condiciones</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MX_WF_Universo_Muestra__c</fullName>
        <label>Universo muestra</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Validacion_URL__c</fullName>
        <formula>MX_WF_URL_que_necesitan_TC__c +  MX_WF_URL_que_no_necesitan_TC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validación URL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vigencia_De_La_Transmision_Hasta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vigencia de la transmisión: hasta</label>
        <type>Date</type>
    </fields>
    <label>Canal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CRM_WF_Estatus__c</columns>
        <columns>MX_WF_No_Solicitudes__c</columns>
        <columns>MX_WF_Tipo_de_Arte__c</columns>
        <columns>MX_WF_Universo_Muestra__c</columns>
        <columns>CRM_WF_Nombre_De_La_Version_Arte__c</columns>
        <columns>MX_WF_Business_Unit__c</columns>
        <columns>MX_WF_Fecha_de_envio_Solicitud__c</columns>
        <columns>CRM_WF_Data_Extension__c</columns>
        <columns>CRM_WF_Nombre_Del_Brief__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000000}</displayFormat>
        <label>Folio de la versión/arte</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canales</pluralLabel>
    <recordTypes>
        <fullName>CRM_WF_Canal_Email_EG</fullName>
        <active>true</active>
        <label>Email EG+ - Silverpop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Silverpop_con_cambios</fullName>
        <active>true</active>
        <label>Email EG+ - Silverpop con cambios</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Email</fullName>
        <active>true</active>
        <label>Email EG+ - Marketing Cloud</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Email_Aplicacion_de_Cambios</fullName>
        <active>true</active>
        <description>Tipo de registro cuando el Arte necesita cambios</description>
        <label>Email EG+ - Marketing Cloud con cambios</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Email_Desclub</fullName>
        <active>true</active>
        <label>Email Whiterock - Marketing Cloud</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Email_Desclub_Con_Cambios</fullName>
        <active>true</active>
        <description>Tipo de registro cuando el email se necesita cambios</description>
        <label>Email Whiterock - Marketing Cloud con cambios</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Email_Silverpop_versi_n_0</fullName>
        <active>true</active>
        <description>Tipo de registro utilizado para la primera versión de los Artes en Producción</description>
        <label>Email Silverpop versión 0</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Multipromociones</fullName>
        <active>true</active>
        <label>Multipromociones</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CRM_WF_URL_CTA_es_obligatoria</fullName>
        <active>true</active>
        <description>El URL es obligatorio cuando el check de Call to Action es seleccionado</description>
        <errorConditionFormula>AND(  ISPICKVAL( CRM_WF_Call_Action__c , &quot;Sí&quot;),
        ISBLANK ( CRM_WF_Link_Call_To_Action__c),
            RecordType.Name  = &quot;Landing Pages&quot;
       )</errorConditionFormula>
        <errorDisplayField>CRM_WF_Link_Call_To_Action__c</errorDisplayField>
        <errorMessage>Si seleccionas la casilla CTA debes agregar la URL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_Vigencia_Obligatoria</fullName>
        <active>true</active>
        <description>La fecha de vigencia se vuelve obligatoria cuando el check de Vigencia Always On es falso</description>
        <errorConditionFormula>AND( ISPICKVAL(CRM_WF_Vigencia_Always_On__c , &quot;No&quot;),
         ISBLANK(CRM_WF_Vigencia__c ) ,
            RecordType.Name  = &quot;Landing Pages&quot;
       )</errorConditionFormula>
        <errorDisplayField>CRM_WF_Vigencia__c</errorDisplayField>
        <errorMessage>Si Vigencia Always On no está seleccionado debes especificar la fecha final de vigencia</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cambios_en_cierre</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL( CRM_WF_Estatus__c , &quot;Cierre&quot;) ,
    OR(
        ISCHANGED(  CRM_WF_Nombre_De_La_Version_Arte__c ) ,
        ISCHANGED(  CRM_WF_Nombre_Del_Brief__c ) ,
        ISCHANGED(  CRM_WF_El_Material_Es_Parte__c  ) ,
        ISCHANGED(  CRM_WF_Objetivo_De_La_Version__c ) ,
        ISCHANGED(  GBL_WF_Tipo_Canal_Canal__c ) ,
        ISCHANGED(  GBL_WF_Producto_Suproducto__c ) ,
        ISCHANGED(  CRM_WF_Audiencia__c ) ,
        ISCHANGED(  CRM_WF_Mensaje_Principal__c ) ,
        ISCHANGED(  CRM_WF_Restriccion_O_Condicionantes__c ) ,
        ISCHANGED(  CRM_WF_Copy_Requiere_Datos_Variables__c ) ,
        ISCHANGED(  CRM_WF_Enlista_Los_Datos_Variables__c ) ,
        ISCHANGED(  CRM_WF_Texto_Incluyendo_Datos_Variables__c ) ,
        ISCHANGED(  CRM_WF_Legales__c ) ,
        ISCHANGED(  CRM_WF_Links_Para_Descarga_De_Material__c ) ,
        ISCHANGED(  CRM_WF_Subject__c ) ,
        ISCHANGED(  CRM_WF_Preheader__c ) ,
        ISCHANGED(  CRM_WF_Open_Rate__c ) ,
        ISCHANGED(  CRM_WF_CTOR__c ) ,
        ISCHANGED(  MX_WF_Carpeta_Logos_Fotos__c ) ,
        ISCHANGED(  CRM_WF_El_Material_Es_Parte__c ) ,
        ISCHANGED(  CRM_WF_Objetivo_De_La_Version__c )



)
)</errorConditionFormula>
        <errorMessage>No se pueden modificar un arte aprobado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Especificar_los_cambios_del_arte</fullName>
        <active>true</active>
        <description>Regla para la aplicación workflow, impide que se haga una nueva versión del arte si el campo historial de cambios está vacío</description>
        <errorConditionFormula>AND ( ISPICKVAL( MX_WF_Crear_Una_Nueva_Version__c , &quot;Sí&quot;) ,
      ISNULL(MX_WF_Historial_de_cambios__c)
     )</errorConditionFormula>
        <errorDisplayField>MX_WF_Historial_de_cambios__c</errorDisplayField>
        <errorMessage>Debes especificar los cambios por los cuales se está creando una nueva versión</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Historial_modificable_solo_cierre</fullName>
        <active>true</active>
        <description>Regla de validación que impide que el campo Historial de cambios se modifique cuando no está en cierre</description>
        <errorConditionFormula>OR(
AND( NOT(ISBLANK(MX_WF_Historial_de_cambios__c))  , 
     ISPICKVAL(CRM_WF_Estatus__c, &quot;Brief Arte&quot;)  ),
AND( ISCHANGED(MX_WF_Historial_de_cambios__c) ,
     NOT(ISPICKVAL( CRM_WF_Estatus__c, &quot;Cierre&quot; ))  )
   )</errorConditionFormula>
        <errorDisplayField>MX_WF_Historial_de_cambios__c</errorDisplayField>
        <errorMessage>El historial de cambios solo se puede editar cuando la etapa se encuentra en cierre</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_LinkArteenCierre</fullName>
        <active>false</active>
        <errorConditionFormula>AND( NOT(ISPICKVAL( CRM_WF_Estatus__c , &quot;Cierre&quot;)), NOT ( ISNULL( MX_WF_URL_Final_Del_Arte__c ) )
)</errorConditionFormula>
        <errorMessage>El link debe ser informado cuando el arte se encuentre en cierre</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Si_Requiere_AB_Testing</fullName>
        <active>true</active>
        <description>Debes indicar Tipo A/B Testing</description>
        <errorConditionFormula>AND 
( 
ISPICKVAL( MX_WF_AB_Testing__c, &quot;Sí&quot;), 
(ISPICKVAL( MX_WF_Tipo_A_B_Testing__c, &quot;&quot;)) 
)</errorConditionFormula>
        <errorMessage>Debes indicar Tipo A/B Testing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Tipo_AB_Testing</fullName>
        <active>true</active>
        <description>No puedes seleccionar Tipo A/B Testing si el canal no requiere A/B Testing</description>
        <errorConditionFormula>AND
(
 ISPICKVAL( MX_WF_AB_Testing__c, &quot;No&quot;),
 NOT(ISPICKVAL( MX_WF_Tipo_A_B_Testing__c, &quot;&quot;))
)</errorConditionFormula>
        <errorMessage>El canal que estás editando no requiere A/B Testing, no debes seleccionar ningún valor para el campo Tipo A/B Testing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Validacionx100deCTOR</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISBLANK(CRM_WF_CTOR__c)),
     OR( CRM_WF_CTOR__c &lt;= 0,  CRM_WF_CTOR__c &gt;100 ) )</errorConditionFormula>
        <errorMessage>El CTOR tiene que ser mayor a 0% y menor o igual a 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Validacionx100deOpenrate</fullName>
        <active>true</active>
        <errorConditionFormula>OR( CRM_WF_Open_Rate__c &lt;= 0, CRM_WF_Open_Rate__c &gt; 100)</errorConditionFormula>
        <errorDisplayField>CRM_WF_Open_Rate__c</errorDisplayField>
        <errorMessage>El open rate tiene que ser mayor a 0% y menor o igual a 100%</errorMessage>
    </validationRules>
</CustomObject>